✅ Refactor product search functionality to support multiple categories and brands, improve search logic, and enhance price filtering